dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=solidusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=solidus-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=solidus-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=solidus-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=solidus-wallet.1
endif
endif
